Batch update words, use create sequence rather than create instant for sorting